# flask_rest_tutorial

./: README.md  pyproject.toml
flask_rest_tutorial/: app.py  build_database.py  models.py  notes.py  people.py  swagger.yml
flask_rest_tutorial/templates/: home.html
