[tool.poetry]
name = "flask-rest-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_rest_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.5.1"
black = "^23.9.1"
flask = "2.2.2"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
flask-marshmallow = {extras = ["sqlalchemy"], version = "^0.15.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
